added: the movie db api and search result

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,4 @@
-$background-primary: #1c202e;
-$background-secondary: #131620;
-$background-border: #4a5167;
-$background-input: #3a3e4d;
+$background-primary: #35495e;
+$background-header: #2c3e4e;
+$background-submit: #428883;
+
